// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computes the arrow styles 1`] = `
Object {
  "left": "0",
  "position": "absolute",
  "top": "0",
  "transform": "translate(10px, 5px)",
}
`;

exports[`computes the popper styles 1`] = `
Object {
  "bottom": "auto",
  "left": "0",
  "position": "absolute",
  "right": "auto",
  "top": "0",
  "transform": "translate3d(10px, 5px, 0)",
}
`;

exports[`computes the popper styles 2`] = `
Object {
  "bottom": "auto",
  "left": "10px",
  "position": "absolute",
  "right": "auto",
  "top": "5px",
  "transform": "",
}
`;

exports[`computes the popper styles 3`] = `
Object {
  "bottom": "-105px",
  "left": "10px",
  "position": "absolute",
  "right": "auto",
  "top": "auto",
  "transform": "",
}
`;

exports[`computes the popper styles 4`] = `
Object {
  "bottom": "auto",
  "left": "auto",
  "position": "absolute",
  "right": "-110px",
  "top": "5px",
  "transform": "",
}
`;

exports[`computes the popper styles 5`] = `
Object {
  "bottom": "auto",
  "left": "auto",
  "position": "absolute",
  "right": "-112px",
  "top": "8px",
  "transform": "",
}
`;

exports[`computes the popper styles 6`] = `
Object {
  "bottom": "auto",
  "left": "auto",
  "position": "absolute",
  "right": "-110.3px",
  "top": "5.83px",
  "transform": "",
}
`;
